--- a/pom.xml
+++ b/pom.xml
@@ -28,4 +28,18 @@
             <version>4.0.1</version>
         </dependency>
     </dependencies>
-</project>
+
+    <configuration>
+        <container>
+            <containerId>tomcat8x</containerId>
+            <type>remote</type>
+        </container>
+        <configuration>
+            <type>runtime</type>
+            <properties>
+                <cargo.remote.username>admin</cargo.remote.username>
+                <cargo.remote.password>1</cargo.remote.password>
+                <cargo.tomcat.manager.url>http://localhost:8080/manager/Checkinn</cargo.tomcat.manager.url>
+            </properties>
+        </configuration>
+    </configuration>
