--- a/pom.xml
+++ b/pom.xml
@@ -29,17 +29,5 @@
         </dependency>
     </dependencies>
 
-    <configuration>
-        <container>
-            <containerId>tomcat8x</containerId>
-            <type>remote</type>
-        </container>
-        <configuration>
-            <type>runtime</type>
-            <properties>
-                <cargo.remote.username>admin</cargo.remote.username>
-                <cargo.remote.password>1</cargo.remote.password>
-                <cargo.tomcat.manager.url>http://localhost:8080/manager/Checkinn</cargo.tomcat.manager.url>
-            </properties>
-        </configuration>
-    </configuration>
+
+</project>
